# GraphicsHW3

./: .clang-format  CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: Triangle.cc.29C6E888391BC18C.idx  Triangle.hh.57F0691B6496757E.idx  TriangleViewer.hh.4529590979701612.idx  Viewer.hh.878F0A599AFEE210.idx  main.cc.A243600C111AD87B.idx
cmake/: StandardProjectSettings.cmake
include/: Camera.hh  Face.hh  NGon.hh  NGonViewer.hh  Triangle.hh  TriangleViewer.hh  Viewer.hh
src/: CMakeLists.txt  Camera.cc  Face.cc  NGon.cc  NGonViewer.cc  Triangle.cc  TriangleViewer.cc  Viewer.cc  main.cc
